Changed Welcome to Hi

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title>THis is my website</title>
 <h1>This is my beautiful website</h1>
-<p>Welcome, I hope you enjoy my websites</p>
+<p>Hi, I hope you enjoy my websites</p>
 <p>:) X) :D XT</p>
 </html>
