--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+
 <html>
 <title>THis is my website</title>
 <h1>This is my beautiful website</h1>
 <p>Hi, I hope you enjoy my websites</p>
 <p>:) X) :D XT</p>
+<P>Feature1</p>
 </html>
